feat: replaced buttons with standalone menu

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Picture-gallery</title>
 </head>
 <body>
     <div id="app">
@@ -12,9 +12,7 @@
         <div class="image-list"></div>
         <div class="image-wrapper">
             <div class="image"></div>
-            <div class="menu">
-                <input type="file" id="image" accept="image/*"/>
-            </div>
+            <div class="menu"></div>
         </div>
     </div>
 </body>
